--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -133,6 +133,7 @@
 				<a href="#" class="anchor underline fs-15">레이블 Underline</a>
 				<button type="button" class="anchor chevron anchor-fluid">업종 전체</button>
 				<button type="button" class="anchor chevron anchor-fluid anchor-border"><span class="body-large fw-700">업종 전체</span></button>
+				<a href="#" class="anchor chevron anchor-fluid anchor-bg"><span class="title-small fw-700 fc-typography-body">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</span></a>
 			</div>
 			<hr>
 
