--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -550,6 +550,96 @@
 					<i class="icon-only icon-12 icon-thumbsdown bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-thumbsdown</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-thumbsdown bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-radio</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-36 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-32 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-28 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-20 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-16 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-14 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-12 icon-radio bg-icon-white"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-player-play</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-36 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-32 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-28 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-20 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-16 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-14 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-12 icon-player-play bg-icon-white"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-player-pause</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-36 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-32 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-28 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-24 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-20 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-16 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-14 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-12 icon-player-pause bg-icon-white"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-player-prev</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-36 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-32 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-28 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-20 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-16 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-14 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-12 icon-player-prev bg-icon-white"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-player-next</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-36 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-32 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-28 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-20 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-16 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-14 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-12 icon-player-next bg-icon-white"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
