--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -106,7 +106,7 @@
 					<div class="tags tags-small tags-deepGray">tags-deepGray</div>
 					<div class="tags tags-small tags-gray">tags-gray</div>
 					<div class="tags tags-small tags-deepBlue">tags-deepBlue</div>
-
+					<div class="tags tags-small tags-surface50">tags-surface50</div>
 				</div>
 			</div>
 			<hr>
