--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -283,7 +283,7 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 main {position:relative;min-height:100vh;}
 main {display:flex;flex-direction:column;}
 main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
-#container {flex:1 1 100%;display: flex;flex-direction: column;width: 100%;}
+#container {flex:1 1 100%;display:flex;flex-direction:column;width:100%;}
 .content {padding:0 16px 24px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;}
 .content-fluid:not(.content) {margin-left:-16px;margin-right:-16px;padding-left:16px;padding-right:16px;}
 .content-fluid:not(.content).px24 {margin-left:-24px;margin-right:-24px;}
@@ -298,6 +298,48 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .content .bottom-btn {width:auto;margin:auto -16px -24px;background-color:var(--background-bg_white);}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 
+.financial-player {background-color:var(--surface-surface900);border-radius:10px 10px 0 0;padding:12px 16px;display:flex;align-items:center;justify-content:space-between;}
+.financial-player-title {display:flex;gap:8px;align-items:center;justify-content:center;}
+.financial-player-title strong {font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;}
+.financial-player-controller {display:flex;gap:14px;align-items:center;justify-content:center;}
+.financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;border-radius:8px;background-color:var(--surface-surface100);}
+.soundwave-container {flex:0 0 16px;width:16px;height:16px;display:flex;align-items:flex-end;justify-content:space-between;gap:3px;padding:1px 2px;}
+.bar {width:2px;background:var(--white-24);border-radius:2px;}
+.financial-player.is-playing .soundwave-container .bar {animation:equalizer 1.9s steps(20, end) infinite;height:100%;background-color:var(--icon-white);}
+.bar:nth-child(1) {height:7px;}
+.bar:nth-child(2) {height:10px;}
+.bar:nth-child(3) {height:14px;}
+.financial-player.is-playing .bar:nth-child(1) {animation-duration:1.9s;}
+.financial-player.is-playing .bar:nth-child(2) {animation-duration:2.0s;}
+.financial-player.is-playing .bar:nth-child(3) {animation-duration:1.7s;}
+@keyframes equalizer {
+    0% {height:60%;}
+    4% {height:50%;}
+    8% {height:40%;}
+    12% {height:30%;}
+    16% {height:20%;}
+    20% {height:30%;}
+    24% {height:40%;}
+    28% {height:10%;}
+    32% {height:40%;}
+    36% {height:60%;}
+    40% {height:20%;}
+    44% {height:40%;}
+    48% {height:70%;}
+    52% {height:30%;}
+    56% {height:10%;}
+    60% {height:30%;}
+    64% {height:50%;}
+    68% {height:60%;}
+    72% {height:70%;}
+    76% {height:80%;}
+    80% {height:70%;}
+    84% {height:60%;}
+    88% {height:50%;}
+    92% {height:60%;}
+    96% {height:70%;}
+    100% {height:80%;}
+}
 
 /* btn-wrap */
 .btn-wrap {display:flex;gap:8px;padding:12px 16px;justify-content:center;align-items:center;background-color:var(--white-100);}
@@ -383,6 +425,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
     -webkit-mask-image:url(../images/snackbar/ico_snackbar_close.svg);
     mask-image:url(../images/snackbar/ico_snackbar_close.svg);
 }
+.snackbar-content.include-bottom-btn.is-sticky {bottom:76px;}
 
 /* box */
 .box {padding:60px 24px;}
